@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17097: Make multiprocessing ignore EINTR.
+
 - Issue #18155: The csv module now correctly handles csv files that use
   a delimiter character that has a special meaning in regexes, instead of
   throwing an exception.
